--- a/app/src/main/res/layout/layout_stateview_neterror.xml
+++ b/app/src/main/res/layout/layout_stateview_neterror.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/tv_net_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="网络出错"
