--- a/app/src/main/res/drawable/ic_collect_normal.xml
+++ b/app/src/main/res/drawable/ic_collect_normal.xml
@@ -1,5 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="1024.0"
-    android:viewportWidth="1024.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#BDD2EF" android:pathData="M887.7,380.2L693,331.4c-3.6,-0.9 -6.7,-3.2 -8.7,-6.3l-106.5,-170c-4.6,-7.3 -10.8,-13.5 -18.1,-18.1 -26.8,-16.8 -62.2,-8.7 -79,18.1L374,325.2c-2,3.1 -5.1,5.4 -8.7,6.3l-194.7,48.8c-8.4,2.1 -16.2,6.1 -22.9,11.7 -24.3,20.3 -27.5,56.5 -7.2,80.8l33.6,40.2 42.6,3.8c201.6,18 379.4,143.6 464,327.9l18.9,41.1 21,8.4c8,3.2 16.7,4.6 25.4,4 31.6,-2.2 55.4,-29.5 53.3,-61.1l-13.8,-200.2c-0.3,-3.7 0.9,-7.3 3.3,-10.2l128.8,-153.9c5.6,-6.6 9.5,-14.5 11.7,-22.9 7.7,-30.9 -10.9,-62 -41.6,-69.7z"/>
-    <path android:fillColor="#BDD2EF" android:pathData="M213.1,559.2l56.4,67.4c2.4,2.8 3.6,6.5 3.3,10.2L259,836.9c-0.6,8.6 0.8,17.3 4,25.4 9,22.3 30.5,35.9 53.2,35.9 7.1,0 14.4,-1.3 21.4,-4.2l186.2,-75c1.7,-0.7 3.5,-1 5.4,-1 1.8,0 3.6,0.3 5.4,1l107.5,43.3c-76.6,-166.6 -238,-286.1 -429,-303.1z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:fillColor="#9e9e9e"
+        android:pathData="M12,21.35l-1.45,-1.32C5.4,15.36 2,12.28 2,8.5 2,5.42 4.42,3 7.5,3c1.74,0 3.41,0.81 4.5,2.09C13.09,3.81 14.76,3 16.5,3 19.58,3 22,5.42 22,8.5c0,3.78 -3.4,6.86 -8.55,11.54L12,21.35z"/>
 </vector>
