增加数据库加密,增加自动登录

--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -13,6 +13,7 @@
         android:background="@color/md_white_1000"
         android:elevation="4dp"
         app:navigationIcon="@drawable/ic_arrow_back"
+        app:popupTheme="@style/ToolbarPopupTheme"
         app:titleTextColor="@color/md_grey_600">
 
     </android.support.v7.widget.Toolbar>
