--- a/app/src/main/res/layout/item_rlv_project.xml
+++ b/app/src/main/res/layout/item_rlv_project.xml
@@ -51,7 +51,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:ellipsize="end"
-        android:maxLines="3"
+        android:maxLines="4"
         android:textSize="13.5dp"
         tools:ignore="SpUsage"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,5 +94,6 @@
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_collect_normal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="ContentDescription" />
 </android.support.constraint.ConstraintLayout>
