--- a/app/src/main/res/layout/item_rlv_project.xml
+++ b/app/src/main/res/layout/item_rlv_project.xml
@@ -15,7 +15,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
 
 
     <android.support.constraint.Barrier
@@ -30,7 +31,7 @@
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="12dp"
         android:layout_marginStart="8dp"
         android:ellipsize="end"
         android:maxLines="3"
@@ -47,7 +48,7 @@
         android:id="@+id/tv_des"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="12dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:ellipsize="end"
