--- a/app/src/main/res/layout/item_rlv_article.xml
+++ b/app/src/main/res/layout/item_rlv_article.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:textSize="13dp"
+        android:textSize="@dimen/dp_13"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpUsage" />
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="10dp"
-        android:textSize="13dp"
+        android:textSize="@dimen/dp_13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpUsage" />
@@ -48,7 +48,7 @@
         android:ellipsize="end"
         android:maxLines="2"
         android:textColor="@color/md_grey_700"
-        android:textSize="16dp"
+        android:textSize="@dimen/dp_16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_author"
@@ -62,7 +62,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:textSize="13dp"
+        android:textSize="@dimen/dp_13"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="SpUsage" />
