--- a/app/src/main/res/layout/item_rlv_project.xml
+++ b/app/src/main/res/layout/item_rlv_project.xml
@@ -36,7 +36,7 @@
         android:ellipsize="end"
         android:maxLines="3"
         android:textColor="@color/md_grey_700"
-        android:textSize="15.5dp"
+        android:textSize="@dimen/dp_15.5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.036"
         app:layout_constraintStart_toEndOf="@+id/barrier"
@@ -53,12 +53,12 @@
         android:layout_marginTop="20dp"
         android:ellipsize="end"
         android:maxLines="4"
-        android:textSize="13.5dp"
-        tools:ignore="SpUsage"
+        android:textSize="@dimen/dp_13.5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.036"
         app:layout_constraintStart_toEndOf="@+id/barrier"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_title"
+        tools:ignore="SpUsage" />
 
 
     <TextView
@@ -68,7 +68,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="216dp"
         android:layout_marginStart="8dp"
-        android:textSize="13dp"
+        android:textSize="@dimen/dp_13"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/barrier"
         tools:ignore="SpUsage" />
@@ -81,7 +81,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:textSize="13dp"
+        android:textSize="@dimen/dp_13"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_date"
         tools:ignore="SpUsage" />
