--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -12,8 +12,10 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/md_white_1000"
         android:elevation="4dp"
+        app:contentInsetStartWithNavigation="0dp"
         app:navigationIcon="@drawable/ic_arrow_back"
         app:popupTheme="@style/ToolbarPopupTheme"
+        app:titleTextAppearance="@style/Toolbar.TitleText"
         app:titleTextColor="@color/md_grey_600">
 
     </android.support.v7.widget.Toolbar>
