--- a/app/src/main/res/layout/layout_stateview_dataerror.xml
+++ b/app/src/main/res/layout/layout_stateview_dataerror.xml
@@ -9,7 +9,8 @@
         android:id="@+id/tv_state_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="数据出错"
+        android:text="@string/data_reload"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
