--- a/app/src/main/res/layout/layout_stateview_loading.xml
+++ b/app/src/main/res/layout/layout_stateview_loading.xml
@@ -5,10 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:textColor="@color/colorAccent"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="正在加载"
+        android:text="@string/loading"
        />
 
 
