--- a/app/src/main/res/layout/layout_stateview_neterror.xml
+++ b/app/src/main/res/layout/layout_stateview_neterror.xml
@@ -8,7 +8,8 @@
         android:id="@+id/tv_net_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="网络出错"
+        android:text="@string/data_reload"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
