--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#cfd8dc</color>
-    <color name="colorAccent">#00b0ff</color>
+    <color name="colorAccent">#6889ff</color>
 
-    <color name="theme">#03A9F4</color>
+    <color name="theme">#6889ff</color>
 </resources>
