--- a/app/src/main/res/layout/common_toolbar.xml
+++ b/app/src/main/res/layout/common_toolbar.xml
@@ -1,11 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar_common"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    app:titleTextColor="@color/white"
-    android:background="@color/theme"
-    app:layout_scrollFlags="scroll|enterAlways">
+    android:layout_height="?attr/actionBarSize">
+
+    <RelativeLayout
+        android:id="@+id/rl_search"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:background="@drawable/shape_bg_search">
+
+
+        <ImageView
+            android:id="@+id/iv_search"
+            android:layout_width="17dp"
+            android:layout_height="17dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="15dp"
+            android:src="@drawable/ic_search"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:id="@+id/tv_search_hint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="15dp"
+            android:layout_toEndOf="@+id/iv_search"
+            android:text="测试搜索文章"
+            android:textColor="@color/md_grey_600"
+            android:textSize="@dimen/dp_14"
+            tools:ignore="SpUsage" />
+
+
+    </RelativeLayout>
+
 
 </android.support.v7.widget.Toolbar>
