--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         app:itemTextColor="@color/selector_bottom_navigation_text"
-        android:background="@color/md_grey_100"
+        android:background="@color/md_white_1000"
         app:layout_behavior="@string/bnv_behavior"
         app:menu="@menu/menu_bottom_navigation_view">
     </android.support.design.widget.BottomNavigationView>
